Working After Long and Lat update
My god...

--- a/res/layout/diary_form.xml
+++ b/res/layout/diary_form.xml
@@ -21,12 +21,7 @@ R.java organized.
 		android:layout_height="wrap_content" android:id="@+id/expEdt_tv_date" android:text="@string/expEdt_str_date"></TextView>
 	<EditText android:layout_height="wrap_content"
 		android:text="" android:layout_width="match_parent" android:id="@+id/expEdt_et_date"/>
-
-	<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
-		android:id="@+id/expEdt_tv_description" android:text="@string/expEdt_str_description"></TextView>
-	<EditText android:layout_height="wrap_content"
-		android:layout_width="match_parent" android:id="@+id/expEdt_et_description"></EditText>
-
+	
 	<TextView
 	    android:id="@+id/expEdt_tv_title"
 	    android:layout_width="wrap_content"
@@ -35,9 +30,28 @@ R.java organized.
 </TextView>
 	<EditText android:layout_height="wrap_content"
 		android:layout_width="match_parent" android:id="@+id/expEdt_et_title"></EditText>
+	
+	<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
+		android:id="@+id/expEdt_tv_description" android:text="@string/expEdt_str_description"></TextView>
+	<EditText android:layout_height="wrap_content"
+		android:layout_width="match_parent" android:id="@+id/expEdt_et_description"></EditText>
+
 	<LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:baselineAligned="true">
 		<ImageButton android:id="@+id/expEdt_ib_receipt" android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/camera"></ImageButton>
 		<Button android:id="@+id/expEdt_bt_save" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="bottom" android:text="@string/expEdt_str_save"></Button>
+
+		<TextView
+		    android:id="@+id/locEdt_et_lat"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="@string/locEdt_str_lat" />
+
+		<TextView
+		    android:id="@+id/locEdt_et_lon"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="@string/locEdt_str_lon" />
+
 	</LinearLayout>
 	<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"  android:id="@+id/expEdt_im_receipt"></ImageView>
 
